Update maas ansible. Update tofu template to include networking for maas

--- a/infra/ansible/roles/maas/templates/maas-netplan.j2
+++ b/infra/ansible/roles/maas/templates/maas-netplan.j2
@@ -2,8 +2,8 @@ network:
     ethernets:
        ens4:
             dhcp4: false
-            match:
-                macaddress: 52:54:00:42:10:4a
-            addresses: [192.168.210.47/24]
-            set-name: ens4
+            addresses: [192.168.21.10/24]
+       ens5:
+            dhcp4: false
+            addresses: [192.168.31.10/24]
     version: 2
